# astrodendro

./: .coveragerc  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES  CHANGES.md  LICENSE  MANIFEST.in  README.md  benchmark.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml
astrodendro/: __init__.py  analysis.py  components.py  dendro_scatter.py  dendrogram.py  flux.py  mass.py  plot.py  post_pruning.py  progressbar.py  pruning.py  scatter.py  structure.py  structure_collection.py  version.py  viewer.py
astrodendro/datasets/: __init__.py
astrodendro/io/: __init__.py  fits.py  handler.py  hdf5.py  util.py
astrodendro/io/tests/: test_fits.py  test_hdf5.py
astrodendro/io/tests/data/: dendro_old.hdf5
astrodendro/test/: __main__.py  _testdata.py  benchmark.py  build_benchmark.py  test_analysis.py  test_compute.py  test_datasets.py  test_flux.py  test_index.py  test_io.py  test_is_independent.py  test_pruning.py  test_recursion.py  test_structure.py
astrodendro/test/benchmark_data/: 2d3.fits  3d.fits  3d1.fits  3d3.fits
astrodendro/tests/: _testdata.py  astrodendro-test  benchmark.py  build_benchmark.py  sample-data-hl.npz  test_analysis.py  test_compute.py  test_flux.py  test_index.py  test_io.py  test_is_independent.py  test_pruning.py  test_recursion.py  test_structure.py  test_viewer.py
astrodendro/tests/benchmark_data/: 2d.fits  2d1.fits  2d2.fits  2d3.fits  3d1.fits  3d2.fits  3d3.fits
docs/: L1551_scuba_850mu.fits  Makefile  PerA_Extn2MASS_F_Gal.fits  advanced.rst  algorithm.rst  catalog.rst  conf.py  examples.rst  index.rst  installing.rst  migration.rst  plotting.rst  rtd-pip-requirements  using.rst
docs/api/: astrodendro.analysis.rst  astrodendro.dendrogram.Dendrogram.rst  astrodendro.dendrogram.periodic_neighbours.rst  astrodendro.plot.DendrogramPlotter.rst  astrodendro.pruning.rst  astrodendro.structure.Structure.rst
docs/diagrams/: README.md
