[metadata]
name = astrodendro
author = Thomas Robitaille, Chris Beaumont, Adam Ginsburg, Braden MacDonald, and Erik Rosolowsky
author_email = thomas.robitaille@gmail.com
license = MIT
license_file = LICENSE
url = http://www.dendrograms.org
description = Python package for computation of astronomical dendrograms
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = dendrograms/astrodendro

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.20
    astropy>=5.0
    matplotlib>=3.3
    h5py>=3

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx<7
    numpydoc
    sphinx-astropy
    aplpy

[options.package_data]
astrodendro.tests = *.npz, benchmark_data/*.fits
astrodendro.io.tests = data/*

[coverage:run]
omit =
    astrodendro/conftest.py
    astrodendro/tests/*
    astrodendro/*/tests/*
    astrodendro/extern/*
    astrodendro/version*
    */astrodendro/conftest.py
    */astrodendro/tests/*
    */astrodendro/*/tests/*
    */astrodendro/extern/*
    */astrodendro/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
